add doc and comment to roles api